fix the width overflowing problem of the middle parts

--- a/src/App.css
+++ b/src/App.css
@@ -30,7 +30,25 @@ h1 {
 }
 
 h2 {
+  grid-area: 1 / 1 / 2 / 2;
+  font-size: 22px;
+  font-weight: 700;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  text-align: left;
+  white-space: nowrap;
+  padding-bottom: 13px;
+  float: left;
   font-family: 'Permanent Marker', cursive;
+}
+
+h2:before {
+  background-color: #37daff;
+  content: '';
+  display: block;
+  height: 3px;
+  width: 35px;
+  margin-bottom: 5px;
 }
 
 .App {
@@ -110,8 +128,9 @@ h2 {
   flex-direction: column;
   justify-content: space-between;
 
-  max-width: 500px;
-  height: 300px;
+  box-sizing: border-box;
+  width: 100%;
+  height: 100%;
   padding: 35px;
 
   border: 1px solid rgba(255, 255, 255, .25);
@@ -122,6 +141,13 @@ h2 {
   backdrop-filter: blur(15px);
 }
 
+.two-col > section:nth-child(1) {
+  justify-self: flex-start;
+}
+
+.two-col > section:nth-child(2) {
+  justify-self: flex-end;
+}
 
 .footer {
   color: white;
