--- a/src/components/NewBoardForm.css
+++ b/src/components/NewBoardForm.css
@@ -29,24 +29,3 @@ input[type="submit"]:hover {
     border: 1px solid #158aff;
     cursor: pointer;
 }
-
-h2 {
-    grid-area: 1 / 1 / 2 / 2;
-    font-size: 18px;
-    font-weight: 700;
-    letter-spacing: 1px;
-    text-transform: uppercase;
-    text-align: left;
-    white-space: nowrap;
-    padding-bottom: 13px;
-    float: left;
-}
-
-h2:before {
-    background-color: #37daff;
-    content: '';
-    display: block;
-    height: 3px;
-    width: 35px;
-    margin-bottom: 5px;
-}
